extensions/windows-admin-center-k8s/v1/oauth2-proxy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: oauth2-proxy
  namespace: ingress-basic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - args:
        - --provider=azure
        - --email-domain=outlook.com
        - --http-address=0.0.0.0:4180
        - --pass-authorization-header=false
        - --cookie-secure=true
        - --client-id=
        - --client-secret=
        - --cookie-secret=
        image: docker.io/bitnami/oauth2-proxy:latest
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: ingress-basic
spec:
  ports:
  - name: http
    port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    app: oauth2-proxy
