extensions/windows-admin-center-k8s/v1/windows-admin-center.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: windows-admin-center
  name: wac-container-clusterip
  labels:
    app: wac-container-clusterip
spec:
  replicas: 1
  template:
    metadata:
      name: wac-container-clusterip
      labels:
        app: wac-container-clusterip
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": windows
      serviceAccountName: wac-service-account
      containers:
      - name: wac-container-clusterip
        image: msftsme.azurecr.io/windowsadmincenter:latest
        imagePullPolicy: Always
        command: ["powershell"]
        args: ["-command", "C:\\containers\\DockerStart.ps1 -mountPoint D: -useExternalStorage"]
        resources:
          limits:
            cpu: 1
            memory: 800M
          requests:
            cpu: .1
            memory: 300M
        volumeMounts:
          - name: wac-storage
            mountPath: 'D:'
        ports:
          - containerPort: 80
      imagePullSecrets:
      - name: msftsme.acr.secret
      volumes:
        - name: wac-storage
          persistentVolumeClaim:
            claimName: wac-storage-claim
  selector:
    matchLabels:
      app: wac-container-clusterip
---
apiVersion: v1
kind: Service
metadata:
  namespace: windows-admin-center
  name: wac-container-clusterip
spec:
  ports:
  - protocol: TCP
    port: 80
  selector:
    app: wac-container-clusterip
