extensions/windows-admin-center-k8s/v1/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wac-ingress
  namespace: windows-admin-center
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.org/websocket-services: "wac-container-clusterip"
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
spec:
  tls:
  - hosts:
    - wac-alboswel-cluster.westus2.cloudapp.azure.com
    secretName: tls-secret-prod
  rules:
  - host: wac-alboswel-cluster.westus2.cloudapp.azure.com
    http:
      paths:
      - backend:
          serviceName: wac-container-clusterip
          servicePort: 80
        path: /
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oauth2-proxy-ingress
  namespace: windows-admin-center
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - wac-alboswel-cluster.westus2.cloudapp.azure.com
    secretName: tls-secret-prod
  rules:
  - host: wac-alboswel-cluster.westus2.cloudapp.azure.com
    http:
      paths:
      - path: /oauth2
        backend:
          serviceName: oauth2-proxy
          servicePort: 4180
