extensions/windows-admin-center-k8s/v1/wac-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wac-ingress
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    # nginx.ingress.kubernetes.io/ssl-passthrough: true
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - wac-aks.westus2.cloudapp.azure.com
    secretName: tls-secret-prod
  rules:
  - host: wac-aks.westus2.cloudapp.azure.com
    http:
      paths:
      - backend:
          serviceName: wac-container-clusterip
          servicePort: 443
        path: /
